Added canvas to the project

--- a/HelicopterGameProject/HelicopterGameProject.csproj
+++ b/HelicopterGameProject/HelicopterGameProject.csproj
@@ -103,7 +103,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Helicopter.png" />
+    <None Include="bin\Debug\Helicopter.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
