--- a/HelicopterGameProject/HelicopterGameProject.csproj
+++ b/HelicopterGameProject/HelicopterGameProject.csproj
@@ -105,8 +105,9 @@
   <ItemGroup>
     <None Include="bin\Debug\Helicopter.png" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Resources\" />
+    <None Include="Resources\Helicopter.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
